# capcode

./: .cruft.json  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: api_docs.md
src/capcode/: add.py
